...
    <string name="decks_bottom_nav_instructions">Instructions</string>
    <string name="decks_bottom_nav_stats">Stats</string>
    <string name="decks_bottom_nav_settings">Settings</string>
    <string name="decks_card_count">%d Cards • %d%%</string>
    <string name="decks_card_count_plus">99+ Cards • %d%%</string>
    <string name="mastery_level_not_started">Not Started</string>
    <string name="mastery_level_novice">Novice</string>
    <string name="mastery_level_sophomore">Sophomore</string>
    <string name="mastery_level_experienced">Experienced</string>
    <string name="mastery_level_veteran">Veteran</string>
    <string name="mastery_level_mastered">Master</string>


    <!-- Decks descriptions -->
    <string name="deck_description_oop">Object Oriented Programming concepts, classes, objects, types of relationships between classes\n\nDo you want to start a study session?</string>
...
    <!-- Empty Deck Dialog -->
    <string name="empty_deck_title">Empty Deck</string>
    <string name="empty_deck_message">The selected topic currently has no flashcards. Please choose another topic to start your study session.</string>
    <string name="empty_deck_confirm">Got it</string>

    <!-- Promo Widget -->
    <string name="promo_widget_title">Ready for a\nchallenge?</string>
    <string name="promo_widget_message">Take a quick 5-min review\nof \'%s\'</string>
    <string name="promo_widget_confirm">START NOW</string>

    <!-- Stats Screen -->
    <string name="stats_head_title">STATISTICS</string>
    <string name="stats_title">Your Progress…</string>
    <string name="stats_skill_mastery">Skill Mastery</string>
    <string name="stats_skill_mastery_view_all">View All</string>
    <string name="stats_skill_mastery_show_less">Show Less</string>
    <string name="stats_at_glance">At a Glance</string>
    <string name="stats_flashcards_viewed">Flashcards Viewed</string>
    <string name="stats_current_streak">Study Goal Streak</string>
    <string name="stats_study_time">Study Time</string>
    <string name="stats_mastered_decks">Mastered Decks</string>
    <string name="stats_title_weekly_activity">Weekly Activity</string>
    <string name="stats_cards_reviewed">Cards Reviewed</string>
    <string name="stats_weekly_activity_info_title">Weekly Activity</string>
    <string name="stats_weekly_activity_info_desc">This chart shows the total number of cards you reviewed each day during the current week. Keep an eye in your daily goal and chain a streak.</string>
    <string name="stats_skill_mastery_info_title">Skill Mastery</string>
    <string name="stats_skill_mastery_info_desc">This section tracks your progress in each topic. Your mastery level increases as you review more cards and you keep doing it everyday.</string>
    <string name="stats_info_dialog_confirm">OK</string>


    <!-- Settings Screen -->
    <string name="settings_head_title">PREFERENCES</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Customize your learning experience</string>
...
