package com.saishaddai.flashcards.utils

/**
 * This class only holds the names of the test tags added as Modifier.testTag("name")
 * in order to avoid the use of hardcoded strings
 */
object TestTags {

    //Common composables in different screens
    const val FULL_LOADER = "full_loader"
    const val BLUE_BUTTON = "blue_button"
    const val TRANSPARENT_BUTTON = "transparent_button"
    const val PROMO_CARD = "promo_card"

    //Deck List Screen
    const val DECKS_LIST_CARD = "deck_card"
    const val DECKS_LIST_DECK_TITLE = "deck_title"
    const val DECKS_LIST_DECK_COUNT = "deck_count"
    const val DECKS_EMPTY_STATE = "decks_empty_state"
    const val DECKS_LIST_START_BUTTON = "decks_start_button"
    const val DECKS_LIST_GRID = "decks_list_grid"

    const val SETTINGS_QUICK_START = "settings_quick_start"
    const val SETTINGS_SHOW_ANSWERS = "settings_show_answers"
    const val SETTINGS_SHOW_SUGGESTIONS = "settings_show_suggestions"
    const val SETTINGS_DAILY_REMINDERS = "settings_daily_reminders"
    const val SETTINGS_STUDY_TIME = "settings_study_time"
    const val SETTINGS_NOTIFICATION_SOUND = "settings_notification_sound"

    const val STATS_WEEKLY_ACTIVITY = "stats_weekly_activity"
    const val STATS_WEEKLY_ACTIVITY_DESCRIPTION = "stats_weekly_activity_description"
    const val STATS_SKILL_MASTERY_DESCRIPTION = "stats_skill_mastery_description"
    const val STATS_PROGRESS_COMPARE = "stats_progress_compare"
    const val STATS_PROGRESS_ICON = "stats_progress_icon"
    const val STATS_PROGRESS_NUMBER = "stats_progress_number"
    const val STATS_WEEKLY_ACTIVITY_TOTAL = "stats_weekly_activity_total"
    const val STATS_FLASHCARDS_VIEWED = "stats_flashcards_viewed"
    const val STATS_CURRENT_STREAK = "stats_current_streak"
    const val STATS_STUDY_TIME = "stats_study_time"
    const val STATS_MASTERED_DECKS = "stats_mastered_decks"
    const val STATS_SKILL_MASTERY_VIEW_ALL = "stats_mastered_view_all"
    const val STATS_INFO_DIALOG_TITLE = "stats_info_dialog_title"
    const val STATS_INFO_DIALOG_DESC = "stats_info_dialog_desc"

    // Error View
    const val ERROR_VIEW = "error_view"
    const val ERROR_VIEW_TITLE = "error_view_title"
    const val ERROR_VIEW_MESSAGE = "error_view_message"
    const val ERROR_VIEW_RETRY_BUTTON = "error_view_retry_button"
}